--- a/index.html
+++ b/index.html
@@ -354,46 +354,30 @@ On-chain rewards + secure staking
 </div>  
 </div>  </div>  
 </div>    </div>  <!-- grid close -->  
-</div>    <!-- section close -->  <!-- ABOUT -->  <div class="section">  
-<h2><i class="fa-solid fa-circle-info icon"></i>About DimeX</h2>  
-<p>  
-DimeX is designed as a staking-focused crypto ecosystem that enables users to stake DMX tokens and participate in a transparent on-chain reward system.    
-The platform emphasizes simplicity, long-term sustainability, and trust while creating a secure environment for users to earn rewards through blockchain technology.  
-</p>  
+</div>    
 </div>
-
+<!-- ABOUT FULL BANNER -->
+<div class="fullBanner">
+  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/about.png">
+</div>
   <!-- MISSION FULL BANNER -->
 <div<!-- VMV Full Banner -->
 <div class="fullBanner">
   <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/vmv.png" alt="Mission Vision Values Banner">
 </div>
-<!-- MISSION + VISION -->  
-<div class="section grid">  
-<div>  
-<h2><i class="fa-solid fa-bullseye"></i> Mission</h2>  
-<p>  
-Our mission is to build a secure and transparent staking ecosystem on the BNB Smart Chain that empowers users through decentralized technology and sustainable reward mechanisms.  
-</p>  
-</div>  <div>  
-<h2><i class="fa-solid fa-eye"></i> Vision</h2>  
-<p>  
-Our vision is to create a globally trusted staking platform that promotes financial participation through blockchain innovation and responsible growth.  
-</p>  
 </div>  
-</div>  <!-- CORE VALUES -->  <div class="section">  
-<h2><i class="fa-solid fa-shield"></i> Core Values</h2>  <div class="grid">  <div class="box">  
-<div class="icon"><i class="fa-solid fa-lock"></i></div>  
-Smart contract security  
-</div>  <div class="box">  
-<div class="icon"><i class="fa-solid fa-users"></i></div>  
-Community growth  
-</div>  <div class="box">  
-<div class="icon"><i class="fa-solid fa-chart-line"></i></div>  
-Sustainable rewards  
-</div>  <div class="box">  
-<div class="icon"><i class="fa-solid fa-globe"></i></div>  
-Global expansion  
-</div>  </div>  
+</div>  <!-- SECURE & TRANSPARENT ECOSYSTEM -->  <div class="section">  
+<h2><i class="fa-solid fa-coins"></i> Secure & Transparent Ecosystem</h2>  
+<p>  
+DimeX is designed to provide a structured, secure, and transparent staking ecosystem where all reward calculations and distributions are handled through verified smart contracts.
+Users can participate with confidence knowing that transactions are recorded on-chain and the system operates with clear, predefined rules.  
+</p>  <div class="grid">  
+<div class="box">✔ Built on BNB Smart Chain</div>  
+<div class="box">✔ Smart-contract-based operations</div>  
+<div class="box">✔ Transparent reward logic</div>  
+<div class="box">✔ No manual interference rewards</div>
+<div class="box">✔ Automated distribution</div>  
+</div>  
 </div>  <!-- STAKING BANNER ONLY -->  <div class="stakingBanner">  
   <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/Dimeximage.png">
   <div class="fullBanner">
@@ -418,16 +402,15 @@ Secure decentralized staking with transparent reward distribution and community-
 <div class="box">✔ On-chain tracking</div>  
 <div class="box">✔ Community rewards</div>  
 </div>  
-</div>  <!-- VARIOUS ASSETS -->  <div class="section">  
-<h2><i class="fa-solid fa-layer-group icon"></i>Various Assets</h2>  
-<p>  
-DimeX supports multiple staking-related assets and future DeFi utilities including liquidity integration and ecosystem expansion.  
-</p>  
-</div>  <!-- TOOLS -->  <div class="section">  
-<h2><i class="fa-solid fa-screwdriver-wrench icon"></i>Enhanced Tools</h2>  
-<p>  
-Advanced tools for analytics, reward tracking, and smart-contract interaction designed for usability and performance.  
-</p>  
+<!-- ASSET FULL BANNER -->
+<div class="fullBanner">
+  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/asset.png">
+</div>
+
+<!-- TOOLS FULL BANNER -->
+<div class="fullBanner">
+  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/tools.png">
+</div>
 </div>  <!-- MARKETING BANNERS -->  <div class="fullBanner">  
   <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/defi.png">  
 </div>  <div class="fullBanner">  
@@ -502,16 +485,10 @@ Verify contract on
 <span style="color:gold;">BscScan</span>  
 </div>  </div>  </div>   <!-- grid close -->  
 </div>   <!-- section-inner close -->  
-</div>   <!-- section close -->  <!-- ROADMAP FULL WIDTH BANNER -->  <div style="width:100%;margin:0;padding:0;background:#000;">  
-  <img   
-  src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/roadmap.png"  
-  style="  
-  width:100vw;  
-  height:auto;  
-  display:block;  
-  margin:0;  
-  padding:0;  
-  ">  
+<!-- ROADMAP IMAGE -->
+<div class="fullBanner">
+  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/map.png">
+</div>
 </div>  <!-- ROADMAP -->  <div class="section">  
 <div class="section-inner">  <h2>  
 <i class="fa-solid fa-road icon"></i>  
