--- a/index.html
+++ b/index.html
@@ -402,14 +402,22 @@ Secure decentralized staking with transparent reward distribution and community-
 <div class="box">✔ On-chain tracking</div>  
 <div class="box">✔ Community rewards</div>  
 </div>  
-<!-- ASSET FULL BANNER -->
-<div class="fullBanner">
-  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/asset.png">
+<!-- TOOLS -->
+<div class="box" style="padding:10px">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/tools.png"
+style="width:100%;border-radius:14px;">
 </div>
 
-<!-- TOOLS FULL BANNER -->
-<div class="fullBanner">
-  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/tools.png">
+</div>
+
+<!-- ASSET CENTER -->
+<div style="max-width:650px;margin:35px auto;">
+<div class="box" style="padding:10px">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/asset.png"
+style="width:100%;border-radius:14px;">
+</div>
+</div>
+
 </div>
 </div>  <!-- MARKETING BANNERS -->  <div class="fullBanner">  
   <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/defi.png">  
@@ -485,9 +493,10 @@ Verify contract on
 <span style="color:gold;">BscScan</span>  
 </div>  </div>  </div>   <!-- grid close -->  
 </div>   <!-- section-inner close -->  
-<!-- ROADMAP IMAGE -->
-<div class="fullBanner">
-  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/map.png">
+<!-- ROADMAP -->
+<div class="box" style="padding:10px">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/map.png"
+style="width:100%;border-radius:14px;">
 </div>
 </div>  <!-- ROADMAP -->  <div class="section">  
 <div class="section-inner">  <h2>  
