--- a/index.html
+++ b/index.html
@@ -403,6 +403,7 @@ Secure decentralized staking with transparent reward distribution and community-
 <div class="box">✔ Community rewards</div>  
 </div>  
 <!-- TOOLS -->
+<div style="max-width:650px;margin:35px auto;">
 <div class="box" style="padding:10px">
 <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/tools.png"
 style="width:100%;border-radius:14px;">
@@ -494,6 +495,7 @@ Verify contract on
 </div>  </div>  </div>   <!-- grid close -->  
 </div>   <!-- section-inner close -->  
 <!-- ROADMAP -->
+<div style="max-width:650px;margin:35px auto;"> 
 <div class="box" style="padding:10px">
 <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/map.png"
 style="width:100%;border-radius:14px;">
