--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ z-index:2;
 
 /* ===== TEXT ===== */
 p{
-  font-size:14px;
+  font-size:13px;
   line-height:1.25;
   margin:0 0 4px 0;
 }
@@ -72,21 +72,21 @@ p{
 
 /* ===== BOX ===== */
 .box{
-  margin:6px 0;
-  padding:14px;
+  margin:2px 0 !important;
+  padding:10px !important;
   border-radius:12px;
   background:#111;
 }
 
 /* ===== GRID ===== */
 .grid{
-  gap:10px;
+  gap:6px !important;
   grid-template-columns:1fr !important;
 }
 
 /* ===== HERO ===== */
 .heroText h1{
-  font-size:24px;
+  font-size:22px;
 }
 
 /* ===== SLIDER ===== */
