--- a/index.html
+++ b/index.html
@@ -379,9 +379,8 @@ Users can participate with confidence knowing that transactions are recorded on-
 <div class="box">✔ Automated distribution</div>  
 </div>  
 </div>  <!-- STAKING BANNER ONLY -->  <div class="stakingBanner">  
-  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/Dimeximage.png">
-  <div class="fullBanner">
-<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/staking.png">
+<div class="fullBanner">  
+img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/stakingrewards.png">rc="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/staking.png">
 </div>
 
 <div class="fullBanner">
@@ -389,7 +388,7 @@ Users can participate with confidence knowing that transactions are recorded on-
 </div>
 
 <div class="fullBanner">
-<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/teambonus.png">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/rank.png">
 </div>
   
 </div>  <!-- STAKING -->  <div class="section">  
