--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ Users can participate with confidence knowing that transactions are recorded on-
 </div>  
 </div>  <!-- STAKING BANNER ONLY -->  <div class="stakingBanner">  
 <div class="fullBanner">  
-img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/stakingrewards.png">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/stakingrewards.png">
 </div>
 
 <div class="fullBanner">
