--- a/index.html
+++ b/index.html
@@ -464,13 +464,8 @@ Supports analysis across multiple digital assets and blockchain ecosystems.
 </div>  
 <b>Secure Data</b><br>  
 All market data is fetched from trusted public crypto APIs.  
-</div>  </div>  <!-- disclaimer -->  <div class="box" style="margin-top:25px;background:#0e0e0e">  
-<div class="icon">  
-<i class="fa-solid fa-triangle-exclamation"></i>  
-</div>  
-<b>Market Disclaimer</b><br>  
-Market analysis tools are provided for informational purposes only and do not constitute financial advice.    
-Users should conduct independent research before making financial decisions.  
+</div>  </div>  
+  
 </div>  <!-- SMART CONTRACT -->  <div class="section">  
 <div class="section-inner">  <div class="box" style="text-align:center; max-width:650px; margin:auto;">  <h2>  
 <i class="fa-solid fa-file-contract icon"></i>  
