--- a/index.html
+++ b/index.html
@@ -419,8 +419,8 @@ style="width:100%;border-radius:14px;">
 </div>
 
 </div>
-</div>  <!-- MARKETING BANNERS -->  <div class="fullBanner">  
-  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/defi.png">  
+</div>  <!-- MARKETING BANNERS -->  <div class="fullBanner" style="margin:0;padding:0">
+  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/Dimeximage.png" style="display:block">
 </div>  <div class="fullBanner">  
   <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/lock.png">  
 </div>  <!-- MARKET ANALYSIS -->  <div class="section">  <h2>  
