--- a/index.html
+++ b/index.html
@@ -377,6 +377,10 @@ Users can participate with confidence knowing that transactions are recorded on-
 <div class="box">✔ Transparent reward logic</div>  
 <div class="box">✔ No manual interference rewards</div>
 <div class="box">✔ Automated distribution</div>  
+</div>
+<!-- SECURITY FULL BANNER -->
+<div class="fullBanner">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/secure.png">
 </div>  
 </div>  <!-- STAKING BANNER ONLY -->  <div class="stakingBanner">  
 <div class="fullBanner">  
@@ -421,8 +425,7 @@ style="width:100%;border-radius:14px;">
 </div>
 </div>  <!-- MARKETING BANNERS -->  <div class="fullBanner" style="margin:0;padding:0">
   <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/Dimeximage.png" style="display:block">
-</div>  <div class="fullBanner">  
-  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/lock.png">  
+</div>    
 </div>  <!-- MARKET ANALYSIS -->  <div class="section">  <h2>  
 <i class="fa-solid fa-chart-line" style="color:gold;margin-right:10px;"></i>  
 Market Analysis  
