--- a/index.html
+++ b/index.html
@@ -365,26 +365,14 @@ On-chain rewards + secure staking
 <div class="fullBanner">
   <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/vmv.png" alt="Mission Vision Values Banner">
 </div>
-</div>  
-</div>  <!-- SECURE & TRANSPARENT ECOSYSTEM -->  <div class="section">  
-<h2><i class="fa-solid fa-coins"></i> Secure & Transparent Ecosystem</h2>  
-<p>  
-DimeX is designed to provide a structured, secure, and transparent staking ecosystem where all reward calculations and distributions are handled through verified smart contracts.
-Users can participate with confidence knowing that transactions are recorded on-chain and the system operates with clear, predefined rules.  
-</p>  <div class="grid">  
-<div class="box">✔ Built on BNB Smart Chain</div>  
-<div class="box">✔ Smart-contract-based operations</div>  
-<div class="box">✔ Transparent reward logic</div>  
-<div class="box">✔ No manual interference rewards</div>
-<div class="box">✔ Automated distribution</div>  
-</div>
+</div>    
 <!-- SECURITY FULL BANNER -->
 <div class="fullBanner">
 <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/secure.png">
 </div>  
 </div>  <!-- STAKING BANNER ONLY -->  <div class="stakingBanner">  
 <div class="fullBanner">  
-<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/stakingrewards.png">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/staking%26rewards.png">
 </div>
 
 <div class="fullBanner">
