--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ Secure decentralized staking with transparent reward distribution and community-
 <div class="box">✔ Community rewards</div>  
 </div>  
 <!-- TOOLS -->
-<div class="box" style="padding:10px"> style="margin:0">
+<div class="box" style="padding:10px">
 <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/enchage.png"
 style="width:100%;border-radius:14px;"> 
 </div>
@@ -402,7 +402,7 @@ style="width:100%;border-radius:14px;">
 <!-- ASSET CENTER -->
 <div class="box" style="padding:10px">
 <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/asset.png"
-style="width:100%;border-radius:14px;">
+style="width:100%;border-radius:14px;object-fit:cover;   /* IMPORTANT */">
 </div>
 </div>
 </div>
