--- a/index.html
+++ b/index.html
@@ -381,29 +381,16 @@ On-chain rewards + secure staking
 
 <div class="fullBanner">
 <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/rank.png">
-</div>
-  
-</div>  <!-- STAKING -->  <div class="section">  
-<h2><i class="fa-solid fa-coins"></i> Staking Platform</h2>  
-<p>  
-Secure decentralized staking with transparent reward distribution and community-driven structure.  
-</p>  <div class="grid">  
-<div class="box">✔ Secure staking</div>  
-<div class="box">✔ Transparent rewards</div>  
-<div class="box">✔ On-chain tracking</div>  
-<div class="box">✔ Community rewards</div>  
+</div> 
 </div>  
 <!-- TOOLS -->
-<div class="box" style="padding:10px">
-<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/enchage.png"
-style="width:100%;border-radius:14px;"> 
+<div class="fullBanner">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/enchage.png">
 </div>
 </div>
 <!-- ASSET CENTER -->
-<div class="box" style="padding:10px">
-<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/asset.png"
-style="width:100%;border-radius:14px;object-fit:cover;   /* IMPORTANT */">
-</div>
+<div class="fullBanner">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/asset.png">
 </div>
 </div>
 </div>  <!-- MARKETING BANNERS -->  <div class="fullBanner" style="margin:0;padding:0">
