--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ Verify contract on
 </div>   <!-- section-inner close -->  
 <!-- ROADMAP -->
 <div class="box" style="padding:10px">
-<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/road.png">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/road.png
 style="width:100%;border-radius:14px;">
 </div>
 </div>  <!-- ROADMAP -->  <div class="section">  
