--- a/index.html
+++ b/index.html
@@ -462,9 +462,8 @@ Verify contract on
 </div>  </div>  </div>   <!-- grid close -->  
 </div>   <!-- section-inner close -->  
 <!-- ROADMAP -->
-<div class="box" style="padding:10px">
-<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/road.png
-style="width:100%;border-radius:14px;">
+<div class="fullBanner">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/road.png">
 </div>
 </div>  <!-- ROADMAP -->  <div class="section">  
 <div class="section-inner">  <h2>  
